test/shouldFail/expr/andDouble.pas
program Sample;
var
  x : double;
begin
  x := 1.1 and 2.0;
//     ^^^^^^^^^^^
// Operator 'and' cannot be applied to double and double
end.
